@@ -46,6 +46,8 @@ Optimizations
 
 * GITHUB#13899: Check ahead if we can get the count. (Lu Xugang)
 
+* GITHUB#13943: Removed shared `HitsThresholdChecker`, which reduces overhead
+  but may delay a bit when dynamic pruning kicks in. (Adrien Grand)
 
 Bug Fixes
 ---------------------
